--- a/content/ch/06/pandas_exercises.ipynb
+++ b/content/ch/06/pandas_exercises.ipynb
@@ -3,6 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
    "source": [
     "# Reference: https://jupyterbook.org/interactive/hiding.html\n",
     "# Use {hide, remove}-{input, output, cell} tags to hiding content\n",
@@ -21,7 +27,10 @@
     "np.set_printoptions(threshold=20, precision=2, suppress=True)\n",
     "pd.set_option('display.max_rows', 7)\n",
     "pd.set_option('display.max_columns', 8)\n",
-    "pd.set_option('precision', 2)\n",
+    "# Original had\n",
+    "# pd.set_option('display.precision', 2)\n",
+    "# I believe this is a bug-fix:\n",
+    "pd.set_option('display.precision', 2)\n",
     "# This option stops scientific notation for pandas\n",
     "# pd.set_option('display.float_format', '{:.2f}'.format)\n",
     "\n",
@@ -30,32 +39,27 @@
     "    with pd.option_context('display.max_rows', rows,\n",
     "                           'display.max_columns', cols):\n",
     "        display(df)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "tags": [
-     "remove-cell"
-    ]
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Exercises"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- Use the `baby` data to create a plot of how popular your name was over time.\n",
     "  If you used that plot to make a guess at your age, what would you guess? Is\n",
     "  that close to your actual age? Think of a potential reason."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- In this chapter we talked about how to use `.loc` and `.iloc` for slicing.\n",
     "  We've also shown a few shorthands. For each of these shorthand code snippets,\n",
@@ -76,11 +80,11 @@
     "  ```python\n",
     "  baby[baby['Count'] < 10]\n",
     "  ```"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- What's the difference between running:\n",
     "  \n",
@@ -105,11 +109,11 @@
     "  ```python\n",
     "  baby['Name'].iloc[0:5, 0]\n",
     "  ```"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- The first code snippet below makes a dataframe with 6 rows, but the second\n",
     "  makes a dataframe with 5 rows. Why?\n",
@@ -121,30 +125,30 @@
     "  ```python\n",
     "  baby.iloc[0:5]\n",
     "  ```"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- When plotting male and female baby names over time, you might notice that\n",
     "  after 1950 there are generally more male babies. Is this trend reflected in\n",
     "  the U.S. census data? Go to the Census website\n",
     "  (https://data.census.gov/cedsci/) and check."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- Find the five names with the highest standard deviation of yearly counts.\n",
     "  What might a large standard deviation tell you about the popularity of these\n",
     "  names over time?"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- Find the five names with the highest *interquartile range* of yearly counts.\n",
     "  The interquartile range is the 75th percentile minus the 25th percentile of\n",
@@ -153,11 +157,11 @@
     "  highest standard deviation? Why might this happen?\n",
     "\n",
     "[quantile]: https://pandas.pydata.org/docs/reference/api/pandas.Series.quantile.html"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "- We've shown this syntax for grouping:\n",
@@ -180,11 +184,11 @@
     "  ```python\n",
     "  baby.groupby(baby['Year'] // 10 * 10)['Count'].sum()\n",
     "  ```"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- Let's say you want to find the most popular male and female baby name each\n",
     "  year. You might write this:\n",
@@ -202,44 +206,34 @@
     "  Now, write code to produce the most popular male and female name each year,\n",
     "  along with its count. *Hint:* you can make use of the fact that within each\n",
     "  year and birth sex, the names are sorted in descending order of popularity."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- Come up with a realistic data example where a data scientist would prefer an\n",
     "  inner join to a left join, and an example where a data scientist would\n",
     "  prefer a left join to an inner join."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- In the section on Joins, the `nyt` table doesn't have any duplicate names.\n",
     "  But a name could feasibly belong to multiple categories---for instance,\n",
     "  `Elizabeth` is a name from the Bible and a name for royalty. Let's say we\n",
     "  have a dataframe called `multi_cat` that can list a name multiple\n",
     "  times---once for each category it belongs to:"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 97,
-   "source": [
-    "multi_cat = pd.DataFrame([\n",
-    "    ['Elizabeth', 'bible'],\n",
-    "    ['Elizabeth', 'royal'],\n",
-    "    ['Arjun', 'hindu'],\n",
-    "    ['Arjun', 'mythological'],\n",
-    "], columns=nyt_small.columns)\n",
-    "multi_cat"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<div>\n",
@@ -297,42 +291,42 @@
        "3      Arjun  mythological"
       ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "metadata": {}
+   "source": [
+    "multi_cat = pd.DataFrame([\n",
+    "    ['Elizabeth', 'bible'],\n",
+    "    ['Elizabeth', 'royal'],\n",
+    "    ['Arjun', 'hindu'],\n",
+    "    ['Arjun', 'mythological'],\n",
+    "], columns=nyt_small.columns)\n",
+    "multi_cat"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "What happens when we join `baby` with this table? In general, what happens when\n",
     "there are *multiple rows* that match in both left and right tables?"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- In a *self-join*, we take a table and join it with itself. For example, the\n",
     "  `friends` table contains pairs of people who are friends with each other."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 102,
-   "source": [
-    "friends = pd.DataFrame([\n",
-    "    ['Jim', 'Scott'],\n",
-    "    ['Scott', 'Philip'],\n",
-    "    ['Philip', 'Tricia'],\n",
-    "    ['Philip', 'Ailie'],\n",
-    "], columns=['self', 'other'])\n",
-    "friends"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<div>\n",
@@ -390,27 +384,33 @@
        "3  Philip   Ailie"
       ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "metadata": {}
+   "source": [
+    "friends = pd.DataFrame([\n",
+    "    ['Jim', 'Scott'],\n",
+    "    ['Scott', 'Philip'],\n",
+    "    ['Philip', 'Tricia'],\n",
+    "    ['Philip', 'Ailie'],\n",
+    "], columns=['self', 'other'])\n",
+    "friends"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Why might a data scientist find the following self-join useful?"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 104,
-   "source": [
-    "friends.merge(friends, left_on='other', right_on='self')"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<div>\n",
@@ -470,21 +470,25 @@
        "2  Scott  Philip  Philip   Ailie"
       ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "metadata": {}
+   "source": [
+    "friends.merge(friends, left_on='other', right_on='self')"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- Have names become longer on average over time? Produce a plot to answer this\n",
     "  question. "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- In this chapter we found that you could make reasonable guesses at a person's\n",
     "  age just by knowing their name. For instance, the name \"Luna\" has sharply\n",
@@ -493,16 +497,31 @@
     "  just from the *first letter* of their name? Write code to see whether this is\n",
     "  possible, and which first letters provide the most information about a\n",
     "  person's age. "
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
+  "jupytext": {
+   "notebook_metadata_filter": "all,-language_info",
+   "split_at_heading": true
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
