--- a/content/ch/07/sql_intro.ipynb
+++ b/content/ch/07/sql_intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -31,7 +31,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53,87 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "remove-cell"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>breed</th>\n",
-       "      <th>grooming</th>\n",
-       "      <th>food_cost</th>\n",
-       "      <th>kids</th>\n",
-       "      <th>size</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>Labrador Retriever</td>\n",
-       "      <td>weekly</td>\n",
-       "      <td>466.0</td>\n",
-       "      <td>high</td>\n",
-       "      <td>medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>German Shepherd</td>\n",
-       "      <td>weekly</td>\n",
-       "      <td>466.0</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>large</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Beagle</td>\n",
-       "      <td>daily</td>\n",
-       "      <td>324.0</td>\n",
-       "      <td>high</td>\n",
-       "      <td>small</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Golden Retriever</td>\n",
-       "      <td>weekly</td>\n",
-       "      <td>466.0</td>\n",
-       "      <td>high</td>\n",
-       "      <td>medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Yorkshire Terrier</td>\n",
-       "      <td>daily</td>\n",
-       "      <td>324.0</td>\n",
-       "      <td>low</td>\n",
-       "      <td>small</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Bulldog</td>\n",
-       "      <td>weekly</td>\n",
-       "      <td>466.0</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Boxer</td>\n",
-       "      <td>weekly</td>\n",
-       "      <td>466.0</td>\n",
-       "      <td>high</td>\n",
-       "      <td>medium</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Jupyter doesn't have a built-in way to display relations, so we jiggle the\n",
     "# dataframe output a bit to make it look like a relation\n",
@@ -142,7 +66,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -154,7 +77,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,8 +96,12 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "notebook_metadata_filter": "all,-language_info",
+   "split_at_heading": true
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -189,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
